# goto2021-raytracing

./: README.md  diffuse_light.py  render_app.py  render_video.py  some_textures.py  task1.py  task2.py  task3.py  task4.py  task5.py
cpp/: main.cpp  window.h
python/: README.md  environment.yml  main.py  render_app.py  simple_template.py  task2.py  task3_tests.py  task4_tests.py
template-cpp/: CMakeLists.txt  main.cpp  solution2.cpp  vectors.h  window.h
template-python/: environment.yml  requirements.txt
templates/cpp/: CMakeLists.txt  main.cpp  util.h  window.h
templates/python/: README.md  environment.yml  main.py  render_app.py
